# ggml-ffi

./: .gitmodules  Cargo.toml  README.md  build.rs  renovate.json  wrapper.h
.github/workflows/: renovate.yml
scripts/: bump_patch_version.sh
src/: lib.rs
