[package]
name = "ggml-ffi"
version = "0.0.1"
edition = "2021"
description = "Up-to-date Rust FFI bindings to GGML."
repository = "https://github.com/EricLBuehler/ggml-ffi"
keywords = ["machine-learning", "ggml"]
categories = ["science"]
license = "MIT"

[features]
# Enable GPU backends via features; default is CPU-only
default = []
# GPU backends
metal = []
cuda = []
vulkan = []
opencl = []
hip = []
musa = []
sycl = []
webgpu = []

[build-dependencies]
bindgen = "0.72"
cmake = "0.1.54"

[dependencies]
libc = "0.2"
